syntax = "proto3";
package xtypes;

option go_package = "github.com/xblocksys/go-xblockchain/xcommon/xtypes/proto";
option java_package = "com.xbctechnologies.core.apis.dto.xtypes.proto";
option java_outer_classname = "UndelegatingTxProto";

message UndelegatingTx {
    string input = 1;
}